# KG_Test

./: .gitignore  AGENT_IMPROVEMENTS.md  AGENT_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_PROMPT_PROPOSAL.md  PR_DESCRIPTION.md  README.md  clean_embeddings.py  neo4j_graph_cleanup.py  pyproject.toml
config/: domain_rules.yaml  settings.py
config/prompts/: README.md
docs/: CHANGES_2025_11_24.md  DUAL_MODEL_GUIDE.md  MODEL_EXTRACTION_ANALYSIS.md  OLLAMA_ENDPOINT_FIX.md  RE_INGESTION_GUIDE.md
examples/: __init__.py  basic_extraction.py  semantic_search.py
scripts/: compare_extraction_models.py  validate_graph_quality.py
src/embeddings/: ollama_embeddings.py
src/extractors/: kg_extractor.py
src/graphrag/: __init__.py  agent.py  agent_legacy.py  authenticated_ollama_llm.py  hybrid_retriever.py  langchain_ollama_auth.py  migration.py  relation_refactoring.py
src/graphrag/agent/: __init__.py  agent_core.py  core.py  memory.py  prompts.py  state.py
src/graphrag/multihop/: analyzer.py
src/graphrag/tools/: base.py  basic_tools.py  executor.py  multihop_tools.py
src/graphrag/utils/: llm_wrapper.py  parsing.py
src/models/: triplets.py
src/storage/: neo4j_store.py
src/ui/: __init__.py  agent_ui.py  app.py  authenticated_ollama_llm.py  file_processor.py  flow_tracker.py  flow_visualizer.py
tests/: check_env.py  debug.py  debug_tool_request.py  embedding_test.py  qwen3_tool_forcing_FIXED.py  smoke_test.py  test_agent.py  test_agent_v2.py  test_agent_v3.py  test_authenticated_ollama_llm.py  test_cypher.py  test_granite_tools.py  test_granite_with_systemprompt.py  test_graphrag_tool_executor.py  test_kg_extractor.py  test_ollama_embeddings.py
